3-year/Q2/LP/Practica_Cantor/ExemplesLab/Exercici7-8/exprsParser.py
# Generated from exprs.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class exprsParser ( Parser ):

    grammarFileName = "exprs.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "','", "')'", "'if'", "'then'", 
                     "'while'", "'do'", "'end'", "'main'", "'return'", "'function'", 
                     "<INVALID>", "':='", "'write'", "<INVALID>", "<INVALID>", 
                     "'='", "'<'", "'>'", "'<>'", "'^'", "'*'", "'/'", "'%'", 
                     "'+'", "'-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IF", "THEN", "WHILE", "DO", "END", "MAIN", "RETURN", 
                      "FUNCTION", "VALB", "ASSIGNA", "ESCRIU", "NUM", "VAR", 
                      "EQU", "LT", "GT", "DIF", "POW", "MUL", "DIV", "MOD", 
                      "ADD", "SUB", "WS" ]

    RULE_root = 0
    RULE_proc = 1
    RULE_inst = 2
    RULE_exBo = 3
    RULE_expr = 4

    ruleNames =  [ "root", "proc", "inst", "exBo", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    IF=4
    THEN=5
    WHILE=6
    DO=7
    END=8
    MAIN=9
    RETURN=10
    FUNCTION=11
    VALB=12
    ASSIGNA=13
    ESCRIU=14
    NUM=15
    VAR=16
    EQU=17
    LT=18
    GT=19
    DIF=20
    POW=21
    MUL=22
    DIV=23
    MOD=24
    ADD=25
    SUB=26
    WS=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(exprsParser.EOF, 0)

        def proc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.ProcContext)
            else:
                return self.getTypedRuleContext(exprsParser.ProcContext,i)


        def getRuleIndex(self):
            return exprsParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = exprsParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                self.proc()
                self.state = 13 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==9 or _la==11):
                    break

            self.state = 15
            self.match(exprsParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return exprsParser.RULE_proc

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FunctionContext(ProcContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ProcContext
            super().__init__(parser)
            self.nomF = None # Token
            self.var1 = None # Token
            self.varS = None # Token
            self.copyFrom(ctx)

        def FUNCTION(self):
            return self.getToken(exprsParser.FUNCTION, 0)
        def END(self):
            return self.getToken(exprsParser.END, 0)
        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(exprsParser.VAR)
            else:
                return self.getToken(exprsParser.VAR, i)
        def inst(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.InstContext)
            else:
                return self.getTypedRuleContext(exprsParser.InstContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)


    class MainContext(ProcContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ProcContext
            super().__init__(parser)
            self.nomF = None # Token
            self.copyFrom(ctx)

        def END(self):
            return self.getToken(exprsParser.END, 0)
        def MAIN(self):
            return self.getToken(exprsParser.MAIN, 0)
        def inst(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.InstContext)
            else:
                return self.getTypedRuleContext(exprsParser.InstContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain" ):
                return visitor.visitMain(self)
            else:
                return visitor.visitChildren(self)



    def proc(self):

        localctx = exprsParser.ProcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_proc)
        self._la = 0 # Token type
        try:
            self.state = 44
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                localctx = exprsParser.MainContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 17
                localctx.nomF = self.match(exprsParser.MAIN)
                self.state = 21
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 83024) != 0):
                    self.state = 18
                    self.inst()
                    self.state = 23
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 24
                self.match(exprsParser.END)
                pass
            elif token in [11]:
                localctx = exprsParser.FunctionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 25
                self.match(exprsParser.FUNCTION)
                self.state = 26
                localctx.nomF = self.match(exprsParser.VAR)
                self.state = 27
                self.match(exprsParser.T__0)
                self.state = 28
                localctx.var1 = self.match(exprsParser.VAR)
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==2:
                    self.state = 29
                    self.match(exprsParser.T__1)
                    self.state = 30
                    localctx.varS = self.match(exprsParser.VAR)
                    self.state = 35
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 36
                self.match(exprsParser.T__2)
                self.state = 38 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 37
                    self.inst()
                    self.state = 40 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 83024) != 0)):
                        break

                self.state = 42
                self.match(exprsParser.END)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return exprsParser.RULE_inst

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignacioContext(InstContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.InstContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(exprsParser.VAR, 0)
        def ASSIGNA(self):
            return self.getToken(exprsParser.ASSIGNA, 0)
        def expr(self):
            return self.getTypedRuleContext(exprsParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignacio" ):
                return visitor.visitAssignacio(self)
            else:
                return visitor.visitChildren(self)


    class EscripturaContext(InstContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.InstContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ESCRIU(self):
            return self.getToken(exprsParser.ESCRIU, 0)
        def expr(self):
            return self.getTypedRuleContext(exprsParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEscriptura" ):
                return visitor.visitEscriptura(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(InstContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.InstContext
            super().__init__(parser)
            self.expBo = None # ExBoContext
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(exprsParser.WHILE, 0)
        def DO(self):
            return self.getToken(exprsParser.DO, 0)
        def END(self):
            return self.getToken(exprsParser.END, 0)
        def exBo(self):
            return self.getTypedRuleContext(exprsParser.ExBoContext,0)

        def inst(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.InstContext)
            else:
                return self.getTypedRuleContext(exprsParser.InstContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class IfContext(InstContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.InstContext
            super().__init__(parser)
            self.expBo = None # ExBoContext
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(exprsParser.IF, 0)
        def THEN(self):
            return self.getToken(exprsParser.THEN, 0)
        def END(self):
            return self.getToken(exprsParser.END, 0)
        def exBo(self):
            return self.getTypedRuleContext(exprsParser.ExBoContext,0)

        def inst(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.InstContext)
            else:
                return self.getTypedRuleContext(exprsParser.InstContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)


    class ReturnContext(InstContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.InstContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RETURN(self):
            return self.getToken(exprsParser.RETURN, 0)
        def expr(self):
            return self.getTypedRuleContext(exprsParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn" ):
                return visitor.visitReturn(self)
            else:
                return visitor.visitChildren(self)



    def inst(self):

        localctx = exprsParser.InstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_inst)
        self._la = 0 # Token type
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                localctx = exprsParser.EscripturaContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.match(exprsParser.ESCRIU)
                self.state = 47
                self.expr(0)
                pass
            elif token in [16]:
                localctx = exprsParser.AssignacioContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.match(exprsParser.VAR)
                self.state = 49
                self.match(exprsParser.ASSIGNA)
                self.state = 50
                self.expr(0)
                pass
            elif token in [4]:
                localctx = exprsParser.IfContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 51
                self.match(exprsParser.IF)
                self.state = 52
                localctx.expBo = self.exBo()
                self.state = 53
                self.match(exprsParser.THEN)
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 83024) != 0):
                    self.state = 54
                    self.inst()
                    self.state = 59
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 60
                self.match(exprsParser.END)
                pass
            elif token in [6]:
                localctx = exprsParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 62
                self.match(exprsParser.WHILE)
                self.state = 63
                localctx.expBo = self.exBo()
                self.state = 64
                self.match(exprsParser.DO)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 83024) != 0):
                    self.state = 65
                    self.inst()
                    self.state = 70
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 71
                self.match(exprsParser.END)
                pass
            elif token in [10]:
                localctx = exprsParser.ReturnContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 73
                self.match(exprsParser.RETURN)
                self.state = 74
                self.expr(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExBoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return exprsParser.RULE_exBo

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CasBaseContext(ExBoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExBoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VALB(self):
            return self.getToken(exprsParser.VALB, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCasBase" ):
                return visitor.visitCasBase(self)
            else:
                return visitor.visitChildren(self)


    class BinariBoolContext(ExBoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExBoContext
            super().__init__(parser)
            self.esq = None # ExprContext
            self.op = None # Token
            self.dre = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.ExprContext)
            else:
                return self.getTypedRuleContext(exprsParser.ExprContext,i)

        def EQU(self):
            return self.getToken(exprsParser.EQU, 0)
        def LT(self):
            return self.getToken(exprsParser.LT, 0)
        def GT(self):
            return self.getToken(exprsParser.GT, 0)
        def DIF(self):
            return self.getToken(exprsParser.DIF, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinariBool" ):
                return visitor.visitBinariBool(self)
            else:
                return visitor.visitChildren(self)



    def exBo(self):

        localctx = exprsParser.ExBoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_exBo)
        self._la = 0 # Token type
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 15, 16]:
                localctx = exprsParser.BinariBoolContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                localctx.esq = self.expr(0)
                self.state = 78
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1966080) != 0)):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 79
                localctx.dre = self.expr(0)
                pass
            elif token in [12]:
                localctx = exprsParser.CasBaseContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.match(exprsParser.VALB)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return exprsParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ParentContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.mig = None # ExprContext
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(exprsParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParent" ):
                return visitor.visitParent(self)
            else:
                return visitor.visitChildren(self)


    class NumeroContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUM(self):
            return self.getToken(exprsParser.NUM, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumero" ):
                return visitor.visitNumero(self)
            else:
                return visitor.visitChildren(self)


    class BinariContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.esq = None # ExprContext
            self.op = None # Token
            self.dre = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.ExprContext)
            else:
                return self.getTypedRuleContext(exprsParser.ExprContext,i)

        def POW(self):
            return self.getToken(exprsParser.POW, 0)
        def MUL(self):
            return self.getToken(exprsParser.MUL, 0)
        def DIV(self):
            return self.getToken(exprsParser.DIV, 0)
        def MOD(self):
            return self.getToken(exprsParser.MOD, 0)
        def ADD(self):
            return self.getToken(exprsParser.ADD, 0)
        def SUB(self):
            return self.getToken(exprsParser.SUB, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinari" ):
                return visitor.visitBinari(self)
            else:
                return visitor.visitChildren(self)


    class CallFunctionContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.nomF = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(exprsParser.ExprContext)
            else:
                return self.getTypedRuleContext(exprsParser.ExprContext,i)

        def VAR(self):
            return self.getToken(exprsParser.VAR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallFunction" ):
                return visitor.visitCallFunction(self)
            else:
                return visitor.visitChildren(self)


    class VariabContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a exprsParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(exprsParser.VAR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariab" ):
                return visitor.visitVariab(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = exprsParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = exprsParser.ParentContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 85
                self.match(exprsParser.T__0)
                self.state = 86
                localctx.mig = self.expr(0)
                self.state = 87
                self.match(exprsParser.T__2)
                pass

            elif la_ == 2:
                localctx = exprsParser.CallFunctionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 89
                localctx.nomF = self.match(exprsParser.VAR)
                self.state = 90
                self.match(exprsParser.T__0)
                self.state = 91
                self.expr(0)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==2:
                    self.state = 92
                    self.match(exprsParser.T__1)
                    self.state = 93
                    self.expr(0)
                    self.state = 98
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 99
                self.match(exprsParser.T__2)
                pass

            elif la_ == 3:
                localctx = exprsParser.NumeroContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 101
                self.match(exprsParser.NUM)
                pass

            elif la_ == 4:
                localctx = exprsParser.VariabContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 102
                self.match(exprsParser.VAR)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 116
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 114
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                    if la_ == 1:
                        localctx = exprsParser.BinariContext(self, exprsParser.ExprContext(self, _parentctx, _parentState))
                        localctx.esq = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 105
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 106
                        localctx.op = self.match(exprsParser.POW)
                        self.state = 107
                        localctx.dre = self.expr(6)
                        pass

                    elif la_ == 2:
                        localctx = exprsParser.BinariContext(self, exprsParser.ExprContext(self, _parentctx, _parentState))
                        localctx.esq = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 108
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 109
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 29360128) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 110
                        localctx.dre = self.expr(5)
                        pass

                    elif la_ == 3:
                        localctx = exprsParser.BinariContext(self, exprsParser.ExprContext(self, _parentctx, _parentState))
                        localctx.esq = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 111
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 112
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==25 or _la==26):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 113
                        localctx.dre = self.expr(4)
                        pass

             
                self.state = 118
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[4] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 3)
         




